--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8010
 
+spring.jpa.properties.hibernate.globally_quoted_identifiers: true
 spring.jpa.hibernate.ddl-auto: update
 spring.datasource.url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/search_engine?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username: root
